--- a/gallery.html
+++ b/gallery.html
@@ -9,11 +9,11 @@
 	<div class="header">
 		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
 		<div class="header-title">
-			<p align="left">Плавательный бассейн Дельфин</p>
+			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
 			<!--<div class="header-contacts-triangle"></div>!-->
-			  <img src="img\logo.png" width="740" height="207" class="transparent50">
+			  <img src="img/logo.png" width="740" height="207" class="transparent50">
 				<div class="header-contacts-block">
 					<p class="font-header-title" style="padding-top: 24px">Наши контакты</p>
 					<p class="text" style="padding-top: 12px">
@@ -26,7 +26,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	<div class="menu">
 		<a href="index.html" class="menu-but">Главная</a>
 		<a href="schedule.html" class="menu-but">Расписание</a>
@@ -46,20 +45,21 @@
 				</div>
 				<div class="content-about-text-data">
 					<div class="content-dwlblock">
-						<a href="photo/small_pool.jpg"><img src="photo/small_pool.jpg" style="height: 100%; width: 100%"></a>
+						<a href="photo/small_pool.jpg"><img src="photo/small_pool.jpg" style="height: 100%; width: 100%" alt="малая чаша"></a>
 					</div>
 					<div class="content-dwlblock">
-						<a href="photo/big_pool.jpg"><img src="photo/big_pool.jpg" style="height: 100%; width: 100%"></a>
+						<a href="photo/big_pool.jpg"><img src="photo/big_pool.jpg" style="height: 100%; width: 100%" alt="большая чаша"></a>
 					</div>
 					<div class="content-dwlblock">
-						<a href="photo/sauna.jpg"><img src="photo/sauna.jpg" style="height: 100%; width: 100%"></a>
+						<a href="photo/sauna.jpg"><img src="photo/sauna.jpg" style="height: 100%; width: 100%" alt="сауна"></a>
 					</div>
 				</div>
 			</div>
 		</div>
 	</div>
 	<div class="footer block-top-shadow">
-		Copyright &copy; 2018 Г. ПБ "Дельфин"
+		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
+		Сайт разработали Криницкий И.И. и Петров А.А.
 	</div>
 </body>
 </html>
