--- a/index.html
+++ b/index.html
@@ -9,11 +9,11 @@
 	<div class="header">
 		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
 		<div class="header-title">
-			<p align="left">Плавательный бассейн Дельфин</p>
+			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
 			<!--<div class="header-contacts-triangle"></div>!-->
-			  <img src="img\logo.png" width="740" height="207" class="transparent50">
+			  <img src="img/logo.png" width="740" height="207" class="transparent50">
 				<div class="header-contacts-block">
 					<p class="font-header-title" style="padding-top: 24px">Наши контакты</p>
 					<p class="text" style="padding-top: 12px">
@@ -26,7 +26,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	<div class="menu">
 		<a href="index.html" class="menu-but">Главная</a>
 		<a href="schedule.html" class="menu-but">Расписание</a>
@@ -47,16 +46,16 @@
 					<p class="text">			
 						Исходя из специфики работы (бассейн школьный), мы строго контролируем качество воды в чашах бассейна и следим санитарным состоянием спортивного сооружения в целом. 
 						В нашем бассейне используются современные технологии многоступенчатой очистки воды, которые позволяют обходиться применением минимального количества агрессивных химикатов, поэтому в воздухе практически отсутствуют пары хлора. 
-						Температурный режим воды и воздуха поддерживается современной системой автоматики, и в бассейне круглый год оптимальный микроклимат, температура в большой чаше бассейна 28-29&deg, в малой чаше – 30-31&deg.
+						Температурный режим воды и воздуха поддерживается современной системой автоматики, и в бассейне круглый год оптимальный микроклимат, температура в большой чаше бассейна 28-29&deg;, в малой чаше – 30-31&deg;.
 					</p>
 				</div>
 			</div>
-			<img src="img\bass.jpg" height="335" width="445" style="float: right; padding-right: 48px">
+			<img src="img/bass.jpg" height="335" width="445" style="float: right; padding-right: 48px" alt="Описание">
 		</div>
 		<div class="content-service-title"><p class="font-content-title">Мы предлагаем</p></div>
 		<div class="content-service">
 			<div class="content-service-pic_container">
-				<img class="round" src="img\serv_aqua.png" height="238" width="236">
+				<img class="round" src="img/serv_aqua.png" height="238" width="236" alt="Аквааэробика">
 			</div>
 			<div class="content-service-data_container ver_line">
 				<div class="content-service-data_container-title">
@@ -69,7 +68,7 @@
 		</div>
 		<div class="content-service hor_line" style="background-color: #f6fafd">
 			<div class="content-service-pic_container">
-				<img class="round" src="img\serv_training.png" height="238" width="236">
+				<img class="round" src="img/serv_training.png" height="238" width="236" alt="Спортивно-оздоровительное плавание">
 			</div>
 			<div class="content-service-data_container ver_line">
 				<div class="content-service-data_container-title">
@@ -82,7 +81,7 @@
 		</div>
 		<div class="content-service hor_line">
 			<div class="content-service-pic_container">
-				<img class="round" src="img\serv_polo.png" height="238" width="236">
+				<img class="round" src="img/serv_polo.png" height="238" width="236" alt="Водное поло">
 			</div>
 			<div class="content-service-data_container ver_line">
 				<div class="content-service-data_container-title">
@@ -90,13 +89,12 @@
 				</div>
 					<p class="serv_text">			
 						Вид спорта, сочетающий в себе сразу несколько направлений: плавание, волейбол, баскетбол и хоккей. Эта игра способствует также развитию физических качеств, закаливанию организма, помогает воспитывать в себе целеустремленность, командный дух, волю к победе. Водное поло — замечательный вид спорта для тех, кто хочет хорошо и быстро плавать, а также стать выносливым и ловким.
-
 					</p>
 			</div>
 		</div>
 		<div class="content-service hor_line" style="background-color: #f6fafd">
 			<div class="content-service-pic_container">
-				<img class="round" src="img\serv_mac.png" height="238" width="236">
+				<img class="round" src="img/serv_mac.png" height="238" width="236" alt="Мать и дитя">
 			</div>
 			<div class="content-service-data_container ver_line">
 				<div class="content-service-data_container-title">
@@ -109,7 +107,7 @@
 		</div>
 		<div class="content-service hor_line">
 			<div class="content-service-pic_container">
-				<img class="round" src="img\serv_free.png" height="238" width="236">
+				<img class="round" src="img/serv_free.png" height="238" width="236" alt="Свободное плавание">
 			</div>
 			<div class="content-service-data_container ver_line">
 				<div class="content-service-data_container-title">
@@ -134,8 +132,8 @@
 							принять вкусный и освежающий кислородный коктейль из натуральных<br>
 							растительных компонентов: сиропа корня солодки и шиповника. (см. цену)<br>
 						</p>
-						<img src="img/kislorodniy-kokteyl.jpg" width="250" height="200" style="margin-top: 18px; float: left;">
-						<img src="img/kislorodniy-kokteyl2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;">
+						<img src="img/kislorodniy-kokteyl.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="фото">
+						<img src="img/kislorodniy-kokteyl2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="фото">
 					</div>
 				</div>
 			</div>
@@ -150,8 +148,8 @@
 							Он укомплектован всеми необходимыми тренажерами<br>
 							и снарядами для занятий. (см. цену)<br>
 						</p>
-						<img src="img/trenajernuy_zal.jpg" width="250" height="200" style="margin-top: 18px; float: left;">
-						<img src="img/trenajernuy_zal2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;">
+						<img src="img/trenajernuy_zal.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="фото">
+						<img src="img/trenajernuy_zal2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="фото">
 					</div>
 				</div>
 			</div>
@@ -167,15 +165,16 @@
 							Оборудование сауны позволяет использовать как сухой,<br>
 							так и влажный пар c арома-маслами.<br>
 						</p>
-						<img src="img/sauna.png" width="280" height="200" style="margin-top: 18px; float: left;">
-						<img src="img/sauna2.jfif" width="300" height="200" style="margin-top: 18px; margin-left: 18px;">
+						<img src="img/sauna.png" width="280" height="200" style="margin-top: 18px; float: left;" alt="фото">
+						<img src="img/sauna2.jfif" width="300" height="200" style="margin-top: 18px; margin-left: 18px;" alt="фото">
 					</div>
 				</div>
 			</div>
 
 	</div>
 	<div class="footer block-top-shadow">
-		Copyright &copy; 2018 Г. ПБ "Дельфин"
+		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
+		Сайт разработали Криницкий И.И. и Петров А.А.
 	</div>
 </body>
 </html>
