--- a/info_int.html
+++ b/info_int.html
@@ -9,11 +9,11 @@
 	<div class="header">
 		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
 		<div class="header-title">
-			<p align="left">Плавательный бассейн Дельфин</p>
+			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
 			<!--<div class="header-contacts-triangle"></div>!-->
-			  <img src="img\logo.png" width="740" height="207" class="transparent50">
+			  <img src="img/logo.png" width="740" height="207" class="transparent50" alt="Лого">
 				<div class="header-contacts-block">
 					<p class="font-header-title" style="padding-top: 24px">Наши контакты</p>
 					<p class="text" style="padding-top: 12px">
@@ -26,7 +26,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	<div class="menu">
 		<a href="index.html" class="menu-but">Главная</a>
 		<a href="schedule.html" class="menu-but">Расписание</a>
@@ -57,17 +56,16 @@
 					<p class="text">
 					<b>1.</b> Когда человек плывет — работают практически все его мышцы. Поэтому не нужно тренировать руки, потом ноги, далее пресс, спину, затем грудные и т.д. В процессе плавания, как уже сказано выше работает всё тело. Каждая мышца по сути получает нагрузку именно такую какая необходима, поэтому тело профессиональных пловцов гармонично развито.<br><br>
 					<b>2.</b> Плавание как спорт – является вторым после бега на лыжах спортом, который отлично тренирует практически все группы мышц.<br><br>
-					<b>3.</b> Постояв минуту в воде с температурой +20&deg, в крови ощутимо повышается уровень гемоглобина. Плавать в холодной воде полезно для выработки гормонов, оно улучшает кровообращение, к тому же замедляет процессы клеточного старения организма.<br><br>
+					<b>3.</b> Постояв минуту в воде с температурой +20&deg;, в крови ощутимо повышается уровень гемоглобина. Плавать в холодной воде полезно для выработки гормонов, оно улучшает кровообращение, к тому же замедляет процессы клеточного старения организма.<br><br>
 					<b>4.</b> Интересные факт — плавание помогает снять стресс. Вода будто «смывает» весь негатив, дарит ощущение свежести, невероятной бодрости, заряжает энергией.
 					</p>
-						</p>
 					</div>
 				</div>
 			</div>
 		</div>
-	</div>
 	<div class="footer block-top-shadow">
-		Copyright &copy; 2018 Г. ПБ "Дельфин"
+		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
+		Сайт разработали Криницкий И.И. и Петров А.А.
 	</div>
 </body>
 </html>
