--- a/pricelist.html
+++ b/pricelist.html
@@ -10,17 +10,17 @@
     border: 1px solid gray;
    }
   </style>
- <link rel="stylesheet" type="text/css" href="style.css">
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="header">
 		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
 		<div class="header-title">
-			<p align="left">Плавательный бассейн Дельфин</p>
+			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
 			<!--<div class="header-contacts-triangle"></div>!-->
-			  <img src="img\logo.png" width="740" height="207" class="transparent50">
+			  <img src="img/logo.png" width="740" height="207" class="transparent50" alt="Лого">
 				<div class="header-contacts-block">
 					<p class="font-header-title" style="padding-top: 24px">Наши контакты</p>
 					<p class="text" style="padding-top: 12px">
@@ -33,7 +33,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	<div class="menu">
 		<a href="index.html" class="menu-but">Главная</a>
 		<a href="schedule.html" class="menu-but">Расписание</a>
@@ -48,12 +47,12 @@
 			<tbody>
 				<tr>
 					<td colspan="6">
-						<p><strong>ПРЕЙСКУРАНТ ЦЕН</p>
+						<p><strong>ПРЕЙСКУРАНТ ЦЕН</strong></p>
 						<p><strong>на платные дополнительные физкультурно-оздоровительные услуги бассейна школы " ДЕЛЬФИН"</strong></p>
 					</td>
 				</tr>
-				<tr bgcolor="#b8c1df">
-					<td rowspan="2" b>
+				<tr style="background-color: #b8c1df">
+					<td rowspan="2">
 						<p><strong>Вид услуги</strong></p>
 					</td>
 					<td rowspan="2">
@@ -67,7 +66,7 @@
 						<p><strong>ВЗРОСЛЫЕ</strong></p>
 					</td>
 				</tr>
-				<tr bgcolor="#b8d2df" >
+				<tr style="background-color:#b8d2df" >
 					<td>
 						<p><strong>Кол-во занятий</strong></p>
 					</td>
@@ -87,7 +86,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td bgcolor="#f6fafd">
+					<td style="background-color:#f6fafd">
 						<p>Спортивно-оздоровительное плавание для детей от 5 лет</p>
 					</td>
 					<td>
@@ -107,7 +106,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="2" bgcolor="#f6fafd">
+					<td rowspan="2" style="background-color:#f6fafd">
 						<p>Семейное плавание (оздоровительное плавание для взрослых и детей)</p>
 					</td>
 					<td rowspan="2">
@@ -141,7 +140,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="2" bgcolor="#f6fafd">
+					<td rowspan="2" style="background-color:#f6fafd">
 						<p>Оздоровительное плавание "Мать и дитя" (совместное групповое занятие)</p>
 					</td>
 					<td rowspan="2">
@@ -169,7 +168,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="2" bgcolor="#f6fafd">
+					<td rowspan="2" style="background-color:#f6fafd">
 						<p>Аквааэробика (групповые фитнес-программы)</p>
 					</td>
 					<td rowspan="2">
@@ -203,7 +202,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td bgcolor="#f6fafd">
+					<td style="background-color:#f6fafd">
 						<p>Спортивно-оздоровительная секция для детей по водному поло&raquo;</p>
 					</td>
 					<td>
@@ -223,7 +222,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="2" bgcolor="#f6fafd">
+					<td rowspan="2" style="background-color:#f6fafd">
 						<p>коллективное посещение группы (от организации, предприятия) оздоровительного плавания</p>
 					</td>
 					<td rowspan="2">
@@ -251,7 +250,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="2" bgcolor="#f6fafd">
+					<td rowspan="2" style="background-color:#f6fafd">
 						<p>коллективное посещение группы (от организации, предприятия) оздоровительного плавания и аквааэробики</p>
 					</td>
 					<td rowspan="2">
@@ -279,7 +278,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td bgcolor="#f6fafd">
+					<td style="background-color:#f6fafd">
 						<p>групповые тренировочные занятия в тренажерном зале с посещением бассейна для детей (с 14 лет) и взрослых</p>
 					</td>
 					<td>
@@ -304,7 +303,7 @@
 					</td>
 				</tr>
 				<tr>
-					<td rowspan="2" bgcolor="#f6fafd">
+					<td rowspan="2" style="background-color:#f6fafd">
 						<p>Изготовление и реализация кислородного коктейля</p>
 					</td>
 					<td>
@@ -332,7 +331,8 @@
 		</table>
 	</div>
 	<div class="footer block-top-shadow">
-		Copyright &copy; 2018 Г. ПБ "Дельфин"
+		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
+		Сайт разработали Криницкий И.И. и Петров А.А.
 	</div>
 </body>
 </html>
