--- a/schedule.html
+++ b/schedule.html
@@ -10,17 +10,17 @@
     border: 1px solid gray;
    }
   </style>
- <link rel="stylesheet" type="text/css" href="style.css">
+ <link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="header">
-		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
+		<!--<img src="img\logo.svg" height="178" style="width:264" style=" padding-left: 400px">!-->
 		<div class="header-title">
-			<p align="left">Плавательный бассейн Дельфин</p>
+			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
 			<!--<div class="header-contacts-triangle"></div>!-->
-			  <img src="img\logo.png" width="740" height="207" class="transparent50">
+			  <img src="img/logo.png" width="740" height="207" class="transparent50" alt="Лого">
 				<div class="header-contacts-block">
 					<p class="font-header-title" style="padding-top: 24px">Наши контакты</p>
 					<p class="text" style="padding-top: 12px">
@@ -33,7 +33,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	<div class="menu">
 		<a href="index.html" class="menu-but">Главная</a>
 		<a href="schedule.html" class="menu-but">Расписание</a>
@@ -54,152 +53,152 @@
 <table>
 <tbody>
 <tr>
-<td rowspan="2" width="165">
+<td rowspan="2" style="width:165px">
 <p><strong><em>День недели</em></strong></p>
 </td>
-<td colspan="2" width="294">
+<td colspan="2" style="width:294px">
 <p><strong><em>Малая чаша</em></strong></p>
 </td>
-<td colspan="2" width="308">
+<td colspan="2" style="width:308px">
 <p><strong><em>Большая чаша</em></strong></p>
 </td>
 </tr>
 <tr>
-<td width="131">
+<td style="width:131px">
 <p><strong><em>Время</em></strong></p>
 </td>
-<td width="163">
+<td style="width:163px">
 <p><strong><em>тренер</em></strong></p>
 </td>
-<td width="136">
+<td style="width:136px">
 <p><strong><em>Время</em></strong></p>
 </td>
-<td width="172">
+<td style="width:172px">
 <p><strong><em>тренер</em></strong></p>
 </td>
 </tr>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong>Вторник</strong></p>
 </td>
-<td width="131">
+<td style="width:131px">
 <p>15.50-16.50</p>
 <p>17.00-18.00</p>
 <p>18.00-19.00</p>
 <p>19.10-20.10</p>
 </td>
-<td width="163">
+<td style="width:163px">
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 </td>
-<td width="136">
+<td style="width:136px">
 <p>11.00-12.00</p>
 <p>16.00-17.00</p>
 <p>17.00-18.00</p>
 </td>
-<td width="172">
+<td style="width:172px">
 <p>Машкова Г.А.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 </td>
 </tr>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong>Среда</strong></p>
 </td>
-<td width="131">
+<td style="width:131px">
 <p>16.50-17.50</p>
 <p>18.00-19.00</p>
 <p>19.10-20.10</p>
 </td>
-<td width="163">
+<td style="width:163px">
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 </td>
-<td width="136">
+<td style="width:136px">
 <p>15.40-16.40</p>
 </td>
-<td width="172">
+<td style="width:172px">
 <p>Котомцева Д.В.</p>
 </td>
 </tr>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong>Четверг</strong></p>
 </td>
-<td width="131">
+<td style="width:131px">
 <p>15.50-16.50</p>
 <p>17.00-18.00</p>
 <p>18.00-19.00</p>
 <p>19.10-20.10</p>
 </td>
-<td width="163">
+<td style="width:163px">
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 </td>
-<td width="136">
+<td style="width:136px">
 <p>11.00-12.00</p>
 <p>16.00-17.00</p>
 <p>17.00-18.00</p>
 </td>
-<td width="172">
+<td style="width:172px">
 <p>Машкова Г.А.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 </td>
 </tr>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong>Пятница</strong></p>
 </td>
-<td width="131">
+<td style="width:131px">
 <p>16.50-17.50</p>
 <p>18.00-19.00</p>
 <p>19.10-20.10</p>
 </td>
-<td width="163">
+<td style="width:163px">
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 </td>
-<td width="136">
+<td style="width:136px">
 <p>15.40-16.40</p>
 </td>
-<td width="172">
+<td style="width:172px">
 <p>Котомцева Д.В.</p>
 </td>
 </tr>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong>Суббота/ Воскресенье</strong></p>
 </td>
-<td width="131">
+<td style="width:131px">
 <p>11.30-12.30</p>
 <p>12.40-13.40</p>
 <p>13.50-14.50</p>
 <p>15.00-16.00</p>
 <p>16.00-17.00</p>
 </td>
-<td width="163">
+<td style="width:163px">
 <p>Котомцева Д.В.</p>
 <p>Котомцева Д.В.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
 <p>Котомцева Д.В.</p>
 </td>
-<td width="136">
+<td style="width:136px">
 <p>9.30-10.30</p>
 <p>11.45-12.45</p>
 <p>12.50-13.50</p>
 <p>15.00-16.00</p>
 <p>16.00-17.00</p>
 </td>
-<td width="172">
+<td style="width:172px">
 <p>Котомцева Д.В.</p>
 <p>Тесля А.В.</p>
 <p>Тесля А.В.</p>
@@ -220,38 +219,38 @@
 <table>
 <tbody>
 <tr>
-<td width="188">
+<td style="width:188px">
 <p><strong><em>День недели</em></strong></p>
 </td>
-<td width="273">
+<td style="width:273px">
 <p><strong><em>Время</em></strong></p>
 </td>
-<td width="307">
+<td style="width:307px">
 <p><strong><em>тренер</em></strong></p>
 </td>
 </tr>
 <tr>
-<td width="188">
+<td style="width:188px">
 <p><strong>Среда</strong></p>
 <p></p>
 </td>
-<td width="273">
+<td style="width:273px">
 <p>09.30-10.30</p>
 <p>11.00-12.00</p>
 </td>
-<td width="307">
+<td style="width:307px">
 <p>Машкова Г.А.</p>
 </td>
 </tr>
 <tr>
-<td width="188">
+<td style="width:188px">
 <p><strong>Пятница</strong></p>
 </td>
-<td width="273">
+<td style="width:273px">
 <p>09.30-10.30</p>
 <p>11.00-12.00</p>
 </td>
-<td width="307">
+<td style="width:307px">
 <p>Машкова Г.А.</p>
 </td>
 </tr>
@@ -265,57 +264,57 @@
 <table>
 <tbody>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>День недели</em></strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>Время</em></strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>тренер</em></strong></p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Вторник</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>12.00-13.00</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Машкова Г.А.</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Четверг</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>12.00-13.00</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Машкова Г.А.</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Суббота</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>10.30-11.30</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Котомцева Д.В.</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Воскресенье</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>10.30-11.30</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Котомцева Д.В.</p>
 </td>
 </tr>
@@ -327,64 +326,64 @@
 <table>
 <tbody>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong><em>День недели</em></strong></p>
 </td>
-<td width="146">
+<td style="width:146px">
 <p><strong><em>Время</em></strong></p>
 </td>
-<td width="200">
+<td style="width:200px">
 <p><strong><em>Место проведения</em></strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>тренр</em></strong></p>
 </td>
 </tr>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong>Понедельник</strong></p>
 </td>
-<td width="146">
+<td style="width:146px">
 <p>15.30-16.30/</p>
 <p>16.30-17.30</p>
 </td>
-<td width="200">
+<td style="width:200px">
 <p>спортзал/</p>
 <p>бассейн</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Мухин Е.М</p>
 </td>
 </tr>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong>Среда</strong></p>
 </td>
-<td width="146">
+<td style="width:146px">
 <p>15.30-16.30/</p>
 <p>16.30-17.30</p>
 </td>
-<td width="200">
+<td style="width:200px">
 <p>спортзал/</p>
 <p>бассейн</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Мухин Е.М</p>
 </td>
 </tr>
 <tr>
-<td width="165">
+<td style="width:165px">
 <p><strong>Воскресенье</strong></p>
 </td>
-<td width="146">
+<td style="width:146px">
 <p> 9.30 -10.30/</p>
 <p>10.30- 11.30</p>
 </td>
-<td width="200">
+<td style="width:200px">
 <p>спортзал/</p>
 <p>бассейн</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Мухин Е.М.</p>
 </td>
 </tr>
@@ -397,57 +396,57 @@
 <table>
 <tbody>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>День недели</em></strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>Время</em></strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>Инструктор</em></strong></p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Вторник </strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>18.00-19.00</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Криницкая Т.А</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Пятница</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>18.00-19.00</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Криницкая Т.А</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Суббота</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>17.00-18.00</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Криницкая Т.А</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Воскресенье</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>18.00-19.00</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Котомцева Д.В.</p>
 </td>
 </tr>
@@ -461,57 +460,57 @@
 <table>
 <tbody>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>День недели</em></strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>Время</em></strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p><strong><em>Инструктор</em></strong></p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Вторник</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>19.00-20.30</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Криницкая Т.А.</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Среда</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>18.30-20.00</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Криницкая Т.А.</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Пятница</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>19.00-20.30</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Криницкая Т.А.</p>
 </td>
 </tr>
 <tr>
-<td width="256">
+<td style="width:256px">
 <p><strong>Суббота</strong></p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>10.30-12.00</p>
 </td>
-<td width="256">
+<td style="width:256px">
 <p>Криницкая Т.А.</p>
 </td>
 </tr>
@@ -519,7 +518,8 @@
 </table>
 	</div>
 	<div class="footer block-top-shadow">
-		Copyright &copy; 2018 Г. ПБ "Дельфин"
+		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
+		Сайт разработали Криницкий И.И. и Петров А.А.
 	</div>
 </body>
 </html>
