--- a/gallery.html
+++ b/gallery.html
@@ -12,16 +12,19 @@
 			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
-			<!--<div class="header-contacts-triangle"></div>!-->
-			  <img src="img/logo.png" width="740" height="207" class="transparent50">
+			  <img src="img/logo.png" width="600" height="207" class="transparent50" alt="Лого">
+			  	<div class="header-contacts-map">
+					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564" 
+					width="210" height="191" frameborder="0" style="border:0" allowfullscreen></iframe>
+				</div>
 				<div class="header-contacts-block">
-					<p class="font-header-title" style="padding-top: 24px">Наши контакты</p>
-					<p class="text" style="padding-top: 12px">
-						Адрес:<br> г. Омск, Кировский округ,<br>
+					<p class="font-header-title" style="padding-top: 20px; padding-left: 20px">Наши контакты</p>
+					<p class="text" style="padding-top: 20px; padding-left: 20px">
+						Адрес: г. Омск, Кировский округ,<br>
 						ул. Мельничная, 4.<br>
 					</p>
-					<p class="text  header-contacts-block-text" style="padding-top: 8px">
-						Телефон: +7 (3812) 55-06-70
+					<p class="text  header-contacts-block-text" style="padding-top: 18px;  padding-left: 20px">
+						Телефон: <a href="tel:+7 (3812) 55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a>
 					</p>
 				</div>
 			</div>
@@ -56,7 +59,6 @@
 				</div>
 			</div>
 		</div>
-	</div>
 	<div class="footer block-top-shadow">
 		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
 		Сайт разработали Криницкий И.И. и Петров А.А.
