--- a/schedule.html
+++ b/schedule.html
@@ -22,7 +22,7 @@
 			  <img src="img/logo.png" width="600" height="207" class="transparent50" alt="Лого">
 			  	<div class="header-contacts-map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564" 
-					width="210" height="191" frameborder="0" allowfullscreen></iframe>
+					width="210" height="191" allowfullscreen style="border: 0"></iframe>
 				</div>
 				<div class="header-contacts-block">
 					<p class="font-header-title" style="padding-top: 20px; padding-left: 20px">Наши контакты</p>
