fix for validation

--- a/gallery.html
+++ b/gallery.html
@@ -24,7 +24,7 @@
 						ул. Мельничная, 4.<br>
 					</p>
 					<p class="text  header-contacts-block-text" style="padding-top: 10px;  padding-left: 20px">
-						Телефон: <a href="tel:+7 (3812) 55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a>
+						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a>
 						Почта: <a href="mailto:aquafitness@bk.ru" style="text-decoration: none; color: #dadaff">aquafitness@bk.ru</a>
 					</p>
 				</div>
