--- a/schedule.html
+++ b/schedule.html
@@ -25,12 +25,12 @@
 					width="210" height="191" allowfullscreen style="border: 0"></iframe>
 				</div>
 				<div class="header-contacts-block">
-					<p class="font-header-title" style="padding-top: 20px; padding-left: 20px">Наши контакты</p>
+					<p class="font-header-title" style="padding-left: 20px">Наши контакты</p>
 					<p class="text" style="padding-top: 20px; padding-left: 20px">
 						Адрес: г. Омск, Кировский округ,<br>
 						ул. Мельничная, 4.<br>
 					</p>
-					<p class="text  header-contacts-block-text" style="padding-top: 10px;  padding-left: 20px">
+					<p class="text  header-contacts-block-text" style="padding-top: 20px;  padding-left: 20px">
 						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a>
 						Почта: <a href="mailto:aquafitness@bk.ru" style="text-decoration: none; color: #dadaff">aquafitness@bk.ru</a>
 					</p>
