--- a/info_rules.html
+++ b/info_rules.html
@@ -12,7 +12,6 @@
 			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
-			  <img src="img/logo.png" width="600" height="207" class="transparent50" alt="Лого">
 			  	<div class="header-contacts-map">
 					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564" 
 					width="210" height="191" allowfullscreen style="border: 0"></iframe>
@@ -24,7 +23,7 @@
 						ул. Мельничная, 4.<br>
 					</p>
 					<p class="text  header-contacts-block-text" style="padding-top: 20px;  padding-left: 20px">
-						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a>
+						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a><br>
 						Почта: <a href="mailto:aquafitness@bk.ru" style="text-decoration: none; color: #dadaff">aquafitness@bk.ru</a>
 					</p>
 				</div>
@@ -33,16 +32,22 @@
 	<div class="menu">
 		<a href="index.html" class="menu-but">Главная</a>
 		<a href="schedule.html" class="menu-but">Расписание</a>
-		<a href="pricelist.html" class="menu-but">Прейскурант</a>
+		<a href="pricelist.html" class="menu-but">Цены</a>
 		<a href="info_rules.html" class="menu-but">Справочник</a>
 		<!--<a href="corp.html" class="menu-but">Корпоративным клиентам</a>!-->
 		<a href="gallery.html" class="menu-but">Галерея</a>
+		<div class="menu-share">
+			<!-- uSocial -->
+			<script async src="https://usocial.pro/usocial/usocial.js?v=6.1.4" data-script="usocial" charset="utf-8"></script>
+			<div class="uSocial-Share" data-pid="ecdea44ec4fe92e5042233e7cf7fe9e8" data-type="share" data-options="rect,style1,default,absolute,horizontal,size32,eachCounter0,counter0" data-social="vk,ok,twi,mail" data-mobile="vi,wa,sms"></div>
+			<!-- /uSocial -->
+		</div>
 	</div>
 	<div class="dec-border"></div>
 	<div class="content" style="width: 100%; height: 100vh;">
 		<div class="content-svblock">
 			<div class="center_border">
-				<div class="paper-shadow center"> <!--Menu Information!-->
+				<div class="paper-shadow"> <!--Menu Information!-->
 					<a href="info_rules.html" class="svblock-but">Правила</a>
 					<a href="info_int.html" class="svblock-but">Полезная информация</a>
 					<a href="docs/dl/rules.zip" class="svblock-but">Скачать документы с правилами</a>
@@ -52,10 +57,6 @@
 		<div class="content-data_svblock">
 			<div class="center_border paper-shadow">
 				<div class="content-about-text-title">
-					<!--<div align="right" style="margin-right: 16px; float: right;">
-						<a href="docs\dl\Правила и меры безопасности.doc">
-						<img src="icons\download.png" width="40" height="40"></a>
-					</div>!-->
 					<p class="font-header-title">
 						Правила посещения бассейна
 					</p>
