--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 	<div class="header">
 		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
 		<div class="header-title">
-			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
+			<p class="header-title-text">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
 			  	<div class="header-contacts-map">
