--- a/schedule.html
+++ b/schedule.html
@@ -15,7 +15,7 @@
 <body>
 	<div class="header">
 		<div class="header-title">
-			<p style="text-align: left;">Плавательный бассейн Дельфин</p>
+			<p class="header-title-text">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
 			  	<div class="header-contacts-map">
