--- a/gallery.html
+++ b/gallery.html
@@ -43,10 +43,9 @@
 			<!-- /uSocial -->
 		</div>
 	</div>
-	<div class="dec-border"></div>
 	<div class="content" style="width: 100%; height: 100vh;">
 				<div class="up_line block-top-shadow"></div>
-			<div class="center_border paper-shadow">
+			<div class="paper-shadow">
 				<div class="content-about-text-title">
 					<p class="font-header-title">
 						Фотографии бассейна
