--- a/index.html
+++ b/index.html
@@ -12,21 +12,20 @@
 			<p class="header-title-text">Плавательный бассейн Дельфин</p>
 		</div>
 		<div class="header-contacts">
-			  	<div class="header-contacts-map">
-					<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564" 
-					width="210" height="191" allowfullscreen style="border: 0"></iframe>
-				</div>
 				<div class="header-contacts-block">
 					<p class="font-header-title" style="padding-left: 20px">Наши контакты</p>
 					<p class="text" style="padding-top: 20px; padding-left: 20px">
 						Адрес: г. Омск, Кировский округ,<br>
 						ул. Мельничная, 4.<br>
 					</p>
-					<p class="text  header-contacts-block-text" style="padding-top: 20px;  padding-left: 20px">
-						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a><br>
+					<p class="text header-contacts-block-text" style="padding-top: 20px;  padding-left: 20px">
+						Телефон: <a href="tel:55-06-70" style="text-decoration: none; color: #dadaff">+7 (3812) 55-06-70</a>
+						<br>
 						Почта: <a href="mailto:aquafitness@bk.ru" style="text-decoration: none; color: #dadaff">aquafitness@bk.ru</a>
 					</p>
 				</div>
+				<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2292.252985155408!2d73.32307758051876!3d54.93357968623823!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x43ab03b2cb37d0cb%3A0x899bb25319c3b143!2z0YPQuy4g0JzQtdC70YzQvdC40YfQvdCw0Y8sIDQsINCe0LzRgdC6LCDQntC80YHQutCw0Y8g0L7QsdC7LiwgNjQ0MDgy!5e0!3m2!1sru!2sru!4v1517129719564" 
+				width="210" height="191" allowfullscreen style="border: 0" class="header-contacts-map"></iframe>
 			</div>
 		</div>
 	<div class="menu">
