--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1">
 <title>Бассейн "Дельфин"</title>
  <link rel="stylesheet" type="text/css" href="style.css">
 </head>
@@ -180,7 +181,7 @@
 	</div>
 	<div class="footer block-top-shadow">
 		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
-		Сайт разработали Криницкий И.И. и Петров А.А.
+		Сайт находится на стадии разработки. Приносим извенения за некоторые неудобства.
 	</div>
 </body>
 </html>
