--- a/gallery.html
+++ b/gallery.html
@@ -65,7 +65,7 @@
 		</div>
 	<div class="footer block-top-shadow">
 		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
-		Сайт разработали Криницкий И.И. и Петров А.А.
+		Сайт находится на стадии разработки. Приносим извенения за некоторые неудобства.
 	</div>
 </body>
 </html>
