--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
 	</div>
 	<div class="footer block-top-shadow">
 		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
-		Сайт находится на стадии разработки. Приносим извенения за некоторые неудобства.
+		Сайт находится в стадии разработки. Приносим извинения за некоторые неудобства.
 	</div>
 </body>
 </html>
