--- a/info_int.html
+++ b/info_int.html
@@ -1,3 +1,6 @@
+---
+redirect_from: "/info/facts/"
+---
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -71,7 +74,7 @@
 		</div>
 	<div class="footer block-top-shadow">
 		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
-		Сайт находится на стадии разработки. Приносим извенения за некоторые неудобства.
+		Сайт находится в стадии разработки. Приносим извинения за некоторые неудобства.
 	</div>
 </body>
 </html>
