--- a/pricelist.html
+++ b/pricelist.html
@@ -1,3 +1,6 @@
+---
+redirect_from: "/pricelist/"
+---
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -338,7 +341,7 @@
 	</div>
 	<div class="footer block-top-shadow">
 		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
-		Сайт находится на стадии разработки. Приносим извенения за некоторые неудобства.
+		Сайт находится в стадии разработки. Приносим извинения за некоторые неудобства.
 	</div>
 </body>
 </html>
