--- a/gallery.html
+++ b/gallery.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Бассейн "Дельфин"</title>
- <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
 </head>
 <body>
 	<div class="header">
@@ -61,6 +61,7 @@
 					<div class="content-dwlblock">
 						<a href="photo/sauna.jpg"><img src="photo/sauna.jpg" style="height: 100%; width: 100%" alt="сауна"></a>
 					</div>
+					
 				</div>
 			</div>
 		</div>
