--- a/index.html
+++ b/index.html
@@ -1,14 +1,23 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114077693-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-114077693-1');
+</script>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
+<meta name="description" content="Бассейн Дельфин г. Омска предлагает услуги: аквааэробика, водное поло, мать и дитя, спортивно-оздоровительное плавание, свободное плавание и др."/>
 <title>Бассейн "Дельфин"</title>
- <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
 </head>
 <body>
 	<div class="header">
-		<!--<img src="img\logo.svg" height="178" width="264" style=" padding-left: 400px">!-->
 		<div class="header-title">
 			<p class="header-title-text">Плавательный бассейн Дельфин</p>
 		</div>
@@ -52,13 +61,13 @@
 				</div>
 				<div class="content-about-text-data">
 					<p class="text">			
-						Исходя из специфики работы (бассейн школьный), мы строго контролируем качество воды в чашах бассейна и следим санитарным состоянием спортивного сооружения в целом. 
+						Исходя из специфики работы (бассейн школьный), мы строго контролируем качество воды в чашах бассейна и следим за санитарным состоянием спортивного сооружения в целом. 
 						В нашем бассейне используются современные технологии многоступенчатой очистки воды, которые позволяют обходиться применением минимального количества агрессивных химикатов, поэтому в воздухе практически отсутствуют пары хлора. 
 						Температурный режим воды и воздуха поддерживается современной системой автоматики, и в бассейне круглый год оптимальный микроклимат, температура в большой чаше бассейна 28-29&deg;, в малой чаше – 30-31&deg;.
 					</p>
 				</div>
 			</div>
-			<img src="img/bass.jpg" height="335" width="445" style="float: right; padding-right: 48px" alt="Описание">
+			<img src="img/bass.jpg" height="335" width="445" style="float: right; padding-right: 48px" alt="Бассейн">
 		</div>
 		<div class="content-service-title"><p class="font-content-title">Мы предлагаем</p></div>
 		<div class="content-service">
@@ -138,10 +147,10 @@
 							После бассейна наши посетители могут без спешки и очереди воспользоваться<br>
 							стационарными фенами для сушки волос (услуга бесплатная),<br>
 							принять вкусный и освежающий кислородный коктейль из натуральных<br>
-							растительных компонентов: сиропа корня солодки и шиповника. (см. цену)<br>
+							растительных компонентов: сиропа корня солодки и шиповника.<br>
 						</p>
-						<img src="img/kislorodniy-kokteyl.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="фото">
-						<img src="img/kislorodniy-kokteyl2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="фото">
+						<img src="img/kislorodniy-kokteyl.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="кислородный коктейль">
+						<img src="img/kislorodniy-kokteyl2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="кислородный коктейль">
 					</div>
 				</div>
 			</div>
@@ -154,10 +163,10 @@
 						<p class="serv_text">
 							В нашем бассейне также присутствует небольшой тренажерный зал.<br>
 							Он укомплектован всеми необходимыми тренажерами<br>
-							и снарядами для занятий. (см. цену)<br>
+							и снарядами для занятий.<br>
 						</p>
-						<img src="img/trenajernuy_zal.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="фото">
-						<img src="img/trenajernuy_zal2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="фото">
+						<img src="img/trenajernuy_zal.jpg" width="250" height="200" style="margin-top: 18px; float: left;" alt="тренажерный зал">
+						<img src="img/trenajernuy_zal2.jpg" width="250" height="200" style="margin-top: 18px; margin-left: 18px;" alt="тренажерный зал">
 					</div>
 				</div>
 			</div>
@@ -173,8 +182,8 @@
 							Оборудование сауны позволяет использовать как сухой,<br>
 							так и влажный пар c арома-маслами.<br>
 						</p>
-						<img src="img/sauna.png" width="280" height="200" style="margin-top: 18px; float: left;" alt="фото">
-						<img src="img/sauna2.jfif" width="300" height="200" style="margin-top: 18px; margin-left: 18px;" alt="фото">
+						<img src="img/sauna.jpg" width="280" height="200" style="margin-top: 18px; float: left;" alt="Сауна">
+						<img src="img/sauna2.jpg" width="300" height="200" style="margin-top: 18px; margin-left: 18px;" alt="Сауна">
 					</div>
 				</div>
 			</div>
@@ -182,6 +191,20 @@
 	<div class="footer block-top-shadow">
 		Copyright &copy; 2018 Г. ПБ "Дельфин"<br>
 		Сайт находится в стадии разработки. Приносим извинения за некоторые неудобства.
+			<!-- Yandex.Metrika counter -->
+				<script src="https://mc.yandex.ru/metrika/watch.js" type="text/javascript"></script>
+				<script type="text/javascript" >
+				try {
+				    var yaCounter47631874 = new Ya.Metrika({
+				        id:47631874,
+				        clickmap:true,
+				        trackLinks:true,
+				        accurateTrackBounce:true
+				    });
+				} catch(e) { }
+				</script>
+				<noscript><div><img src="https://mc.yandex.ru/watch/47631874" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
+			<!-- /Yandex.Metrika counter -->
 	</div>
 </body>
 </html>
