--- a/info_int.html
+++ b/info_int.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Бассейн "Дельфин"</title>
- <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
 </head>
 <body>
 	<div class="header">
