--- a/schedule.html
+++ b/schedule.html
@@ -11,7 +11,7 @@
     border: 1px solid gray;
    }
   </style>
- <link rel="stylesheet" href="style.css">
+<link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
 </head>
 <body>
 	<div class="header">
