--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="Бассейн Дельфин г. Омска предлагает услуги: аквааэробика, водное поло, мать и дитя, спортивно-оздоровительное плавание, свободное плавание и др."/>
 <title>Бассейн "Дельфин"</title>
-<link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="header">
