--- a/info_rules.html
+++ b/info_rules.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="UTF-8">
 <title>Бассейн "Дельфин"</title>
-<link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="header">
