--- a/pricelist.html
+++ b/pricelist.html
@@ -11,7 +11,7 @@
     border: 1px solid gray;
    }
   </style>
-<link rel="preload" href="style.css" as="style" onload="this.rel='stylesheet'">
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<div class="header">
