set name on pages in their title

--- a/info_int.html
+++ b/info_int.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Бассейн "Дельфин"</title>
+<title>Интересные факты</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -56,7 +55,7 @@
 			<div class="center_border paper-shadow">
 				<div class="content-about-text-title">
 					<p class="font-header-title">
-						Интересная и полезная информация
+						Интересные факты
 					</p>
 				</div>
 				<div class="content-about-text-data data-format">
