--- a/pricelist.html
+++ b/pricelist.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Бассейн "Дельфин"</title>
+<title>Цены</title>
 <style>
    TD, TH { 
     text-align: center; 
