--- a/gallery.html
+++ b/gallery.html
@@ -1,9 +1,8 @@
-
 <!DOCTYPE html>
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Бассейн "Дельфин"</title>
+<title>Галерея</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
