--- a/info_rules.html
+++ b/info_rules.html
@@ -3,7 +3,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
-<title>Бассейн "Дельфин"</title>
+<title>Правила посещения</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
@@ -57,7 +57,7 @@
 			<div class="center_border paper-shadow">
 				<div class="content-about-text-title">
 					<p class="font-header-title">
-						Правила посещения бассейна
+						Правила посещения
 					</p>
 				</div>
 				<div class="content-about-text-data data-format">
