--- a/info_rules.html
+++ b/info_rules.html
@@ -2,6 +2,14 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-114077693-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+  gtag('config', 'UA-114077693-1');
+</script>
 <meta charset="UTF-8">
 <title>Правила посещения</title>
 <link rel="stylesheet" href="style.css">
