--- a/gallery.html
+++ b/gallery.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114077693-1"></script>
 <script>
