--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<meta name="yandex-verification" content="4c733645b5a3681f"/>
 	<!-- Global site tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114077693-1"></script>
