--- a/info_rules.html
+++ b/info_rules.html
@@ -2,6 +2,7 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
+	 <link rel="shortcut icon" type="image/x-icon" href="favicon.ico">
 	<!-- Global Site Tag (gtag.js) - Google Analytics -->
 <script async src="https://www.googletagmanager.com/gtag/js?id=UA-114077693-1"></script>
 <script>
