--- a/index.html
+++ b/index.html
@@ -55,6 +55,18 @@
 	</div>
 	<div class="content">
 		<div class="up_line block-top-shadow"></div>
+				<div class="content-info_block paper-shadow">
+				<div class="content-about-text-title">
+					<p class="font-content-title">Объявление</p>
+				</div>
+				<div class="content-about-text-data">
+					<p class="text">			
+						Уважаемые посетители, бассейн закрыт на летний период. Запись в группу осуществляется с 27 августа 
+						по адресу Мельничная 4. Начало занятий с 4 сентября. Более подробную информацию о стоимости и расписании
+						отслеживайте на сайте с 24 августа.
+					</p>
+				</div>
+		</div>
 		<div class="content-about paper-shadow">
 			<div class="content-about-text">
 				<div class="content-about-text-title">
